# mi-UGens

./: .gitignore  build.sh
MiGrids/: MiGrids.cpp
MiPlaits/: CMakeLists.txt
MiPlaits/MiPlaits/: MiPlaits.cpp
MiPlaits/MiPlaitsAdditive/: CMakeLists.txt
MiPlaits/MiPlaitsBassDrum/: CMakeLists.txt  MiPlaitsBassDrum.cpp
MiPlaits/MiPlaitsChord/: CMakeLists.txt  MiPlaitsChord.cpp
MiPlaits/MiPlaitsGrain/: CMakeLists.txt  MiPlaitsGrain.cpp
MiPlaits/MiPlaitsHiHat/: CMakeLists.txt  MiPlaitsHiHat.cpp
MiPlaits/MiPlaitsNoise/: MiPlaitsNoise.cpp
MiPlaits/MiPlaitsParticle/: CMakeLists.txt
MiPlaits/MiPlaitsSnareDrum/: CMakeLists.txt  MiPlaitsSnareDrum.cpp
MiPlaits/MiPlaitsSpeech/: CMakeLists.txt  MiPlaitsSpeech.cpp
MiPlaits/MiPlaitsString/: CMakeLists.txt  MiPlaitsString.cpp
MiPlaits/MiPlaitsSwarm/: MiPlaitsSwarm.cpp
MiPlaitsAdditive/: CMakeLists.txt  MiPlaitsAdditive.cpp
MiPlaitsBassDrum/: CMakeLists.txt
MiPlaitsChord/: CMakeLists.txt
MiPlaitsCommon/: CMakeTemplate.txt  MiPlaits.h
MiPlaitsFM/: CMakeLists.txt  MiPlaitsFM.cpp
MiPlaitsGrain/: CMakeLists.txt
MiPlaitsHiHat/: CMakeLists.txt
MiPlaitsModal/: CMakeLists.txt  MiPlaitsModal.cpp
MiPlaitsNoise/: CMakeLists.txt
MiPlaitsParticle/: CMakeLists.txt  MiPlaitsParticle.cpp
MiPlaitsSnareDrum/: CMakeLists.txt
MiPlaitsSpeech/: CMakeLists.txt
MiPlaitsString/: CMakeLists.txt
MiPlaitsSwarm/: CMakeLists.txt
MiPlaitsVirtualAnalog/: CMakeLists.txt  MiPlaitsVirtualAnalog.cpp
MiPlaitsWaveshaping/: CMakeLists.txt  MiPlaitsWaveshaping.cpp
MiPlaitsWavetable/: CMakeLists.txt
(+9 files in other folders)
